--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ input[type="number"] {
   position: relative;
 }
 
-.details-btn {
+.details-button {
   position: absolute;
   right: 5px;
   bottom: 5px;
